samples/_failures_safe/1761295169_650566_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_152c2896.c: In function ‘tokenize’:
./samples/SAFE/__tmp_152c2896.c:158:31: error: expected ‘;’ at end of input
  158 |                 token.value[0]
      |                               ^
      |                               ;
./samples/SAFE/__tmp_152c2896.c:158:17: error: expected declaration or statement at end of input
  158 |                 token.value[0]
      |                 ^~~~~
./samples/SAFE/__tmp_152c2896.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_152c2896.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_152c2896.c:158:17: error: expected declaration or statement at end of input
